@@ -1,3 +1,8 @@
+2011-01-27  Kai Habel  <kai.habel@gmx.de>
+
+	* plot/uigetfile.m, plot/uiputfile.m, plot/uigetdir.m: Check
+	for __fltk_uigetfile__.
+
 2011-01-27  John W. Eaton  <jwe@octave.org>
 
 	* Makefile.am (check-missing-semicolon): New rule.
